--- a/css.css
+++ b/css.css
@@ -34,6 +34,13 @@ hr {
 	height:100%;
 }
 
+#container_2 {
+    -webkit-transform: rotate(90deg);
+    -moz-transform: rotate(90deg);
+    -o-transform: rotate(90deg);
+    -ms-transform: rotate(90deg);
+    transform: rotate(90deg);
+}
 .centered {
 	margin: 0 auto;
 	position: absolute;
